--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,11 +4,10 @@
 target 'AmbleOn' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
+
   # Pods for AmbleOn
   rn_path = '../node_modules/react-native'
   rn_maps_path = '../node_modules/react-native-maps'
-
-  # See http://facebook.github.io/react-native/docs/integration-with-existing-apps.html#configuring-cocoapods-dependencies
   pod 'yoga', path: "#{rn_path}/ReactCommon/yoga/yoga.podspec"
   pod 'React', path: rn_path, subspecs: [
     'Core',
@@ -34,23 +33,28 @@ target 'AmbleOn' do
   #pod 'GLog', :podspec => "#{rn_path}/third-party-podspecs/GLog.podspec"
   pod 'Folly', :podspec => "#{rn_path}/third-party-podspecs/Folly.podspec"
 
-  # react-native-maps dependencies
-  pod 'react-native-maps', path: rn_maps_path
+
+  pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
+
+  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+  pod 'FBSDKCoreKit', '~> 4.42.0'
+  pod 'FBSDKLoginKit', '~> 4.42.0'
+  pod 'FBSDKShareKit', '~> 4.42.0'
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
+
+  pod 'RNImageCropPicker', :path => '../node_modules/react-native-image-crop-picker'
+
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
   pod 'react-native-google-maps', path: rn_maps_path  # Uncomment this line if you want to support GoogleMaps on iOS
   pod 'GoogleMaps'  # Uncomment this line if you want to support GoogleMaps on iOS
   pod 'Google-Maps-iOS-Utils' # Uncomment this line if you want to support GoogleMaps on iOS
 
-  # pod 'FacebookSDK'
-  # pod 'FBSDKCoreKit', '4.4.0'
-  # pod 'FBSDKLoginKit', '4.4.0'
-  # pod 'FBSDKShareKit', '4.4.0'
-  pod 'GoogleSignIn', '~> 4.4.0'
-  pod 'Firebase/Core'
-  pod 'RNImageCropPicker', :path =>  '../node_modules/react-native-image-crop-picker'
-  pod 'react-native-video', :path => '../node_modules/react-native-video'
-  pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
-  pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
-  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+  pod 'Firebase/Core'
 end
