--- a/ios/AmbleOn/Info.plist
+++ b/ios/AmbleOn/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>FacebookAppID</key>
 	<string>2632017823480237</string>
 	<key>FacebookDisplayName</key>
@@ -68,7 +68,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) camera use</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>$(PRODUCT_NAME) micro phone use</string>
 	<key>NSPhotoLibraryUsageDescription</key>
