--- a/ios/Podfile
+++ b/ios/Podfile
@@ -57,6 +57,10 @@ target 'AmbleOn' do
 
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
   pod 'Firebase/Core'
+  pod 'RNAudio', :path => '../node_modules/react-native-audio'
+
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
 end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
