--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "15.7.2",
     "react": "16.6.3",
     "react-native": "0.58.6",
+    "react-native-audio": "^4.3.0",
     "react-native-audio-recorder-player": "^2.1.4",
     "react-native-dimension": "^1.0.6",
     "react-native-document-picker": "^2.3.0",
@@ -29,6 +30,7 @@
     "react-native-maps": "0.23.0",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-sound": "^0.10.12",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^3.2.1",
