fix image issue

--- a/ios/AmbleOn/Info.plist
+++ b/ios/AmbleOn/Info.plist
@@ -58,6 +58,11 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>http://ec2-3-14-143-176.us-east-2.compute.amazonaws.com</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
