--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,36 +3,34 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>291405854067-qb6bs5jpcq545umclmunfme5jtut4rla.apps.googleusercontent.com</string>
+	<string>377027305156-308rjc8b3pb4krou3vmtkgebmtegqjcd.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.291405854067-qb6bs5jpcq545umclmunfme5jtut4rla</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>291405854067-odjhghenmqd1hh91eqhsv9bu5jvd8evp.apps.googleusercontent.com</string>
+	<string>com.googleusercontent.apps.377027305156-308rjc8b3pb4krou3vmtkgebmtegqjcd</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA51U0cwaPb82wTp3vCpnebf2JZFL7nvCM</string>
+	<string>AIzaSyDYaOr1KJsuxpNaBDiJpGF1av2D1V2TtOo</string>
 	<key>GCM_SENDER_ID</key>
-	<string>291405854067</string>
+	<string>377027305156</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.ambleon.AmbleOn</string>
 	<key>PROJECT_ID</key>
-	<string>geotourist-94354</string>
+	<string>ambleon-1570055964427</string>
 	<key>STORAGE_BUCKET</key>
-	<string>geotourist-94354.appspot.com</string>
+	<string>ambleon-1570055964427.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:291405854067:ios:0e9998472c8dc57e</string>
+	<string>1:377027305156:ios:db38603cffcbe56e447391</string>
 	<key>DATABASE_URL</key>
-	<string>https://geotourist-94354.firebaseio.com</string>
+	<string>https://ambleon-1570055964427.firebaseio.com</string>
 </dict>
 </plist>
